white-space wrap style fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,7 @@ form {
     label {
         margin: 5px;
         margin-left: auto;
+        white-space: nowrap;
     }
 
     .check-item {
